Added Iron router support

--- a/client/app/main.html
+++ b/client/app/main.html
@@ -6,6 +6,6 @@
 <body>
 </body>
 
-<template name="famousInit">
+<!-- <template name="famousInit">
 	{{> View template="puzzlePage" modifier="modifier"}}
-</template>
+</template> -->
