--- a/client/pages/puzzlePage/goalView/goalView.html
+++ b/client/pages/puzzlePage/goalView/goalView.html
@@ -1,10 +1,10 @@
 
 <template name="goalView">
-	{{#GridLayout size="[undefined, undefined]" dimensions="[3,1]"}}
+	{{#GridLayout size="[undefined, undefined]" dimensions="[6,1]" }}
 		{{#famousEach puzzleSpots}}
-			{{>Surface template="goalSurface" modifier="modifier" size="[undefined, undefined]"}}
+			{{>Surface template="goalSurface" modifier="modifier" size="[undefined, undefined]" properties="backgroundColor:red"}}
 		{{/famousEach}}
 	{{/GridLayout}}
 </template>
-
+	
 
