--- a/client/pages/landingPage/landingPage.html
+++ b/client/pages/landingPage/landingPage.html
@@ -1,5 +1,9 @@
 <template name ="landingPage">
 	<main id="landingPage">
-		<H1>Landing Page</H1>
+		{{>Surface template="landingPageContent" size="[undefined,undefined]" modifier="modifier"}}
 	</main>
+</template>
+
+<template name="landingPageContent">
+	<h1> Landing Page</h1>
 </template>
