--- a/client/pages/notFoundPage/notFoundPage.html
+++ b/client/pages/notFoundPage/notFoundPage.html
@@ -1,3 +1,8 @@
+
 <template name="notFoundPage">
-	<h1>404 not found</h1>
+	{{>Surface template="notFoundPageContent" size="[undefined,undefined]" modifier="modifier"}}
+</template>
+
+<template name="notFoundPageContent">
+		<h1>404 not found</h1>
 </template>
